# Advent-Code-2022

./: .gitignore  Cargo.toml  README.md
01/: joel_solution.py
02/: main.py
17/: part1.py  part2.py
18/: part1.py  part2.py
benchmarks/: Cargo.toml
benchmarks/src/: day06_2.rs  main.rs
revisited/: Cargo.toml
revisited/py_solutions/: 19.py
revisited/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day19.rs  day19a.rs  day19b.rs  day19c.rs  day19d.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day24a.rs  day25.rs  main.rs  scratch.rs
rust/day-01/src/: lib.rs
rust/day-02/src/: main.rs  part1.rs  part2.rs
rust/day-03/: julia_solution.ipynb
rust/day-03/src/: main.rs  part1.rs  part2.rs
rust/day-04/: py_solution.ipynb
rust/day-04/src/: main.rs  part1.rs  part2.rs
rust/day-05/: py_solution.ipynb
rust/day-05/src/: main.rs  part1.rs
rust/day-06/src/: main.rs  part1.rs  part2.rs
rust/day-07/: input.txt
rust/day-07/src/: main.rs  part1.rs  part2.rs
rust/day-08/: Cargo.toml
rust/day-08/src/: main.rs  part1.rs  part2.rs
rust/day-09/src/: main.rs  part1.rs  part2.rs  part2_proper.rs
rust/day-10/: Cargo.toml
rust/day-10/src/: main.rs  part1.rs  part2.rs
rust/day-11/: Cargo.toml
rust/day-11/src/: main.rs  part1.rs  part2.rs  pasrt2.rs
rust/day-12/: Cargo.toml
rust/day-12/src/: part1.rs  part2.rs
rust/day-13/src/: main.rs  part1.rs  part2.rs
rust/day-14/: Cargo.toml
rust/day-15/: Cargo.toml
rust/day-16/: Cargo.toml  visualize.ipynb
rust/day-18/: Cargo.toml
rust/day-20/: pypart1.py  test.txt
(+17 files in other folders)
