[package]
name = "revisited"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iterchunks = "0.3.0"
regex = "1.7.1"
nom = "7.1.3"
itertools = "0.10.5"
ndarray = "0.15.6"
num = "0.4.0"
variants-struct = "0.1.1"
derive_more = "0.99.16"
strum = "0.25"
strum_macros = "0.25"
